--- a/style.css
+++ b/style.css
@@ -16,10 +16,8 @@ body {
 
 /* HEADER*/
 nav {
-    text-align: right;
-    /* padding: 10px;
-    width: 500px;
-    margin-left: 500px; */
+		display: flex;
+	justify-content: end;
 }
 
 header {
